# booklibrary

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ses-templates.yaml
alembic/: env.py
alembic/versions/: 731d47932c74_initial_migrations.py
app/: config.py  database.py  main.py  session_manager.py
app/api/: base_service.py  exceptions.py
app/api/authentication/: oauth2.py  routes.py  schemas.py  service.py
app/api/authors/: routes.py  schemas.py  service.py
app/api/books/: routes.py  schemas.py  service.py
app/api/genres/: exceptions.py  routes.py  schemas.py  service.py
app/api/subscriptions/: email_service.py  routes.py  schemas.py  service.py
app/api/users/: routes.py  schemas.py  service.py
app/core/: aiobotocore_session.py
app/migrations/: env.py
app/migrations/versions/: 07f4fb352b02_initial.py  1277e84a894d_initial_migrations.py  be805304e56f_initial.py
app/models/: __init__.py  author_models.py  authors.py  base.py  book_models.py  books.py  genre_models.py  genres.py  subscription_models.py  subscriptions.py  user_models.py  users.py
app/tests/: conftest.py  factory_creators.py  factory_schemas.py  test_auth.py  test_authors.py  test_books.py  test_genres.py  test_subscriptions.py  test_users.py
tests/: test_draft.py
