[tool.poetry]
name = "BookLibrary"
version = "0.1.0"
description = ""
authors = ["Rauan Kassymkhanov <rauan.kassymkhanov@nixs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.0.3"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pytest-asyncio = "^0.23.8"
polyfactory = "^2.16.2"
asyncpg = "^0.29.0"
pytest = "8.1.1"
httpx = "^0.27.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
freezegun = "^1.5.1"
aiobotocore = "^2.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "T201"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
